--- a/operational/environment.yml
+++ b/operational/environment.yml
@@ -2,6 +2,12 @@ name: paleocaladjust
 channels:
   - conda-forge
   - defaults
+  - anaconda
 dependencies:
-  - libnetcdf=4.4.1.1=9
-  - netcdf-fortran=4.4.4=5
+  - gcc
+  - libtools
+  - autoconf
+  - automake
+  - hdf5
+  - libcurl
+  - zlib
