Updating my local verison to fit with the v1.1

--- a/operational/makefile
+++ b/operational/makefile
@@ -5,29 +5,26 @@ prog = ../f90/main_programs/
 mod = ../f90/modules/
 
 # netCDF and OpenMP libraries -- needs localization
-NCINC = -I$(HOME)/DATA/PaleoCalAdjust/netcdf/include
-NCLIB = -L$(HOME)/DATA/PaleoCalAdjust/netcdf/lib 
+NCINC = $(HOME)/.conda/envs/paleocaladjust/include
+NCLIB = $(HOME)/.conda/envs/paleocaladjust/ib
 LIBS = -lnetcdff -lnetcdf -lgomp
 
 # compiler and flags
 FC = gfortran 
-FFLAGS = -O3 -Wall -Wl,-rpath,$(HOME)/.conda/envs/paleocaladjust/lib
+FFLAGS = -O3 -Wall -Wl, -ffree-line-length-160
 
 # target, object and .mod files
 target = cal_adjust_curated
-objects = pseudo_daily_interp_subs.o calendar_effects_subs.o GISS_orbpar_subs.o \
+objects = pseudo_daily_interp_subs.o GISS_orbpar_subs.o spline_subs.o mp_interp_epstein_subs.o mp_interp_harzallah_subs.o\
     GISS_srevents_subs.o month_length_subs.o CMIP_netCDF_subs.o cal_adjust_curated.o
-modules = pseudo_daily_interp_subs.mod calendar_effects_subs.mod GISS_orbpar_subs.mod \
+modules = pseudo_daily_interp_subs.mod GISS_orbpar_subs.mod spline_subs.mod mp_interp_epstein_subs.mod mp_interp_harzallah_subs.mod\
     GISS_srevents_subs.mod month_length_subs.mod CMIP_netCDF_subs.mod
 
 $(target): $(objects) 
-	$(FC) $(FFLAGS) $(NCLIB) -o $(target) $(objects) $(LIBS)
+	$(FC) $(FFLAGS) -L$(NCLIB) -o $(target) $(objects) $(LIBS)
 
 pseudo_daily_interp_subs.o: $(mod)pseudo_daily_interp_subs.f90
 	$(FC) $(FFLAGS) -c $(mod)pseudo_daily_interp_subs.f90
-
-calendar_effects_subs.o: $(mod)calendar_effects_subs.f90
-	$(FC) $(FFLAGS) -c $(mod)calendar_effects_subs.f90
 
 GISS_orbpar_subs.o: $(mod)GISS_orbpar_subs.f90
 	$(FC) $(FFLAGS) -c $(mod)GISS_orbpar_subs.f90
@@ -39,7 +36,16 @@ month_length_subs.o: $(mod)month_length_subs.f90
 	$(FC) $(FFLAGS) -c $(mod)month_length_subs.f90
 
 CMIP_netCDF_subs.o: $(mod)CMIP_netCDF_subs.f90 
-	$(FC) $(FFLAGS) $(NCINC) -c $(mod)CMIP_netCDF_subs.f90 
+	$(FC) $(FFLAGS) -I$(NCINC) -c $(mod)CMIP_netCDF_subs.f90 
+
+spline_subs.o: $(mod)spline_subs.f90
+	$(FC) $(FFLAGS) -I$(NCINC) -c $(mod)spline_subs.f90
+
+mp_interp_epstein_subs.o: $(mod)mp_interp_epstein_subs.f90 
+	$(FC) $(FFLAGS) -I$(NCINC) -c $(mod)mp_interp_epstein_subs.f90 
+
+mp_interp_harzallah_subs.o: $(mod)mp_interp_harzallah_subs.f90 
+	$(FC) $(FFLAGS) -I$(NCINC) -c $(mod)mp_interp_harzallah_subs.f90 
 
 cal_adjust_curated.o: $(prog)cal_adjust_curated.f90
 	$(FC) $(FFLAGS) -fopenmp -c $(prog)cal_adjust_curated.f90
@@ -48,6 +54,5 @@ clean:
 	rm -f $(objects)
 	rm -f $(modules)
  
-
 clobber: clean
 	rm -f $(target)
