--- a/operational/makefile
+++ b/operational/makefile
@@ -1,4 +1,4 @@
-# cal_adjust_PMIP
+# cal_adjust
 
 # (relative) paths to source files -- needs localization
 prog = ../f90/main_programs/
@@ -6,22 +6,22 @@ mod = ../f90/modules/
 
 # netCDF and OpenMP libraries -- needs localization
 NCINC = $(HOME)/.conda/envs/paleocaladjust/include
-NCLIB = $(HOME)/.conda/envs/paleocaladjust/ib
+NCLIB = $(HOME)/.conda/envs/paleocaladjust/lib
 LIBS = -lnetcdff -lnetcdf -lgomp
 
 # compiler and flags
 FC = gfortran 
-FFLAGS = -O3 -Wall -Wl, -ffree-line-length-160
+FFLAGS = -O3 -Wall -ffree-line-length-160
 
 # target, object and .mod files
-target = cal_adjust_curated
+target = cal_adjust
 objects = pseudo_daily_interp_subs.o GISS_orbpar_subs.o spline_subs.o mp_interp_epstein_subs.o mp_interp_harzallah_subs.o\
-    GISS_srevents_subs.o month_length_subs.o CMIP_netCDF_subs.o cal_adjust_curated.o
+    GISS_srevents_subs.o month_length_subs.o CMIP_netCDF_subs.o cal_adjust.o
 modules = pseudo_daily_interp_subs.mod GISS_orbpar_subs.mod spline_subs.mod mp_interp_epstein_subs.mod mp_interp_harzallah_subs.mod\
     GISS_srevents_subs.mod month_length_subs.mod CMIP_netCDF_subs.mod
 
 $(target): $(objects) 
-	$(FC) $(FFLAGS) -L$(NCLIB) -o $(target) $(objects) $(LIBS)
+	$(FC) $(FFLAGS) -L$(NCLIB) $(LIBS) -o $(target) $(objects) 
 
 pseudo_daily_interp_subs.o: $(mod)pseudo_daily_interp_subs.f90
 	$(FC) $(FFLAGS) -c $(mod)pseudo_daily_interp_subs.f90
@@ -47,8 +47,8 @@ mp_interp_epstein_subs.o: $(mod)mp_interp_epstein_subs.f90
 mp_interp_harzallah_subs.o: $(mod)mp_interp_harzallah_subs.f90 
 	$(FC) $(FFLAGS) -I$(NCINC) -c $(mod)mp_interp_harzallah_subs.f90 
 
-cal_adjust_curated.o: $(prog)cal_adjust_curated.f90
-	$(FC) $(FFLAGS) -fopenmp -c $(prog)cal_adjust_curated.f90
+cal_adjust.o: $(prog)cal_adjust.f90
+	$(FC) $(FFLAGS) -fopenmp -c $(prog)cal_adjust.f90
 
 clean: 
 	rm -f $(objects)
